Let the process ITs follow the convention of the other ITs
ProcessStartIT, ProcessStartModeIT, ProcessSignalIT,
ErrandDecisionProcessIT, ProcessLoopGuardIT and ProcessEventRelayIT
stubbed WireMock in @BeforeEach, called the service through an exchange
of their own and parsed the answers by hand. They now do as the other
ITs do:

- every call through setupCall(), with its request, response and
  WireMock mappings as files under __files/testNN_.../
- state read back through the resources that show it - processes,
  process activities, decisions, notifications, the ETag of the errand
  and the health of the relay under /actuator - rather than through
  repositories; the outbox, notification_dispatch, the state of the
  circuit breaker and a decision gone with its errand in the database
  have no such resource and are still read directly
- dates known from the test data or the request written out in the
  response files, and ${json-unit.any-string} kept for what the test
  itself creates or changes
- the order pw-alkt receives events in, and an answer that changes from
  one call to the next, held by WireMock scenarios in the mappings
- a test that ran several independent cases split into one test per
  case, so that no test needs to tell its own rows apart

ProcessLoopGuardIT now has the handler signal and start the process
through the signal and start endpoints; only the commands sent as a
process engine, which those endpoints refuse, still go through
EventService.

Test data: the assignment the start and signal tests need moved into
testdata-process-start.sql and a new testdata-process-signal.sql, and
the live instance of the relay test into
testdata-process-event-live-instance.sql.